refactoring test classes into documents api